Finalisation des fonctionnalités